# illumicarge_firmware

./: .gitignore  CMakeLists.txt  README.rst  prj.conf
boards/: nucleo_f303re.overlay
doc/: .$class_diagram.drawio.bkp  .$class_diagram.drawio.dtmp  PBS_MindMap.xmind  Session 0.sal  class_diagram.drawio  end_to_end_test_scope.sal  errata.numbers
doc/drafts/empty_class/: empty_class.c  empty_class.h
doc/vscode_workspaces/: main.code-workspace  nucleo_f303re_device_tree_source.code-workspace  pinctrl.code-workspace  pio.code-workspace  zephyr.code-workspace  zephyr_error_code.code-workspace
src/: main.c  tests.c  tests.h
src/adc_reader/: adc_reader.c  adc_reader.h
src/battery_monitor/: battery_monitor.c  battery_monitor.h
src/gpio_controller/: gpio_controller.c  gpio_controller.h
src/power_path_controller/: power_path_controller.c  power_path_controller.h
src/pwm_controller/: pwm_controller.c  pwm_controller.h
src/tests/: tests.c  tests.h
src/user_interface/: user_interface.c  user_interface.h
